--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                           Hi! I am Leon, Yinleung Ley (<span style="font-family: 'LXGW WenKai Mono TC'">李賢亮</span>) or Xianliang Li, a 2nd year Master student at <a href="https://english.ucas.ac.cn/">University of Chinese Academy of Sciences</a>. I’m also working as a research student at <a href="http://english.siat.cas.cn/">Shenzhen Institute of Advanced Technology</a>. Before that, I received my B.S. degree from <a href="https://www.sysu.edu.cn/sysuen/">Sun Yat-sen University</a> in 2022.
                         </p>
                         <p>
-                            My research interests lie in optimization for machine learning and deep learning.
+                            My research interests lie in optimization for machine learning.
                         </p>
                     </div>
 
