--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
                                         University of Chinese Academy of Sciences
                                     </p>
                                     <p style="text-align: left; font-size: 16px;">
+                                        <b>Email</b>: yinleung.ley at gmail.com
+                                    </p>
+                                    <p style="text-align: left; font-size: 16px;">
                                         <b>Email</b>: xl.li4 at siat.ac.cn
                                     </p>
                                 </td>
