--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                                         <td style="width: 70%; vertical-align: middle;">
                                             <h3>Time-of-Arrival Simultaneous Sensor and Target Localization with Dynamic Optimal Sensor Placements</h3>
                                             <p><b>Xianliang Li</b>, <a href="https://scholar.google.com/citations?user=nLsqCz4AAAAJ&hl=zh-en">Sheng Xu</a><sup>&dagger;</sup>, <a href="https://cisp.ece.missouri.edu/">K. C. Ho</a></p>
-                                            <p><em>IEEE Transactions on Mobile Computing (<i>under review</i>)</em> 2024</p>
+                                            <p><em>(<i>under review</i>)</em> 2024</p>
                                             <p>
                                                 We focus on optimizing the performance of simultaneous sensor and target localization (SSTL) with several mobile monostatic sensors, using the time-of-arrival (TOA) measurements returned from the target, passive anchors at known positions, and other sensors.
                                             </p>
