--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                                         </td>
                                         <td style="width: 80%; vertical-align: middle;">
                                             <h3>University of Chinese Academy of Sciences</h3>
-                                            <p>Master student in Computer Technology</p>
+                                            <p>Master student in Computer Science</p>
                                             <p>Advisor: <a href="https://scholar.google.com/citations?user=nLsqCz4AAAAJ&hl=zh-en">Prof. Sheng Xu</a></p>
                                             <p>2022.9 - Present</p>
                                         </td>
