--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                         University of Chinese Academy of Sciences
                                     </p>
                                     <p style="text-align: left; font-size: 16px;">
-                                        <b>Email</b>: yinleung (dot) ley (at) gmail (dot) com
+                                        <b>Email</b>: yinleung.ley (at) gmail.com / xl.li4 (at) siat.ac.cn
                                     </p>
                                 </td>
                                 <td class="profile-photo" style="padding: 10px; width: 34%; max-width: 150px;">
