--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                         李賢亮
                                     </p>
                                     <p style="text-align: center; font-family: serif, 'Lato', Verdana, Helvetica, sans-serif; font-size: 18px; margin-bottom: 20px;">
-                                        <a href="https://scholar.google.com/citations?user=aohpUx0AAAAJ">Google Scholar</a> / 
+                                        <a href="https://scholar.google.com/citations?user=vQKUgscAAAAJ&hl=en&oi=ao">Google Scholar</a> / 
                                         <a href="https://github.com/yinleung">GitHub</a> / 
                                         <a href="https://orcid.org/0009-0001-4532-3968">ORCID</a> / 
                                         <a href="https://yinleung.github.io/files/xlliCV.pdf">CV</a>
@@ -87,7 +87,7 @@
 
                     <div class="content">
                         <p>
-                          Hi! I am Leon, Yinleung Ley (<span style="font-family: 'LXGW WenKai Mono TC'">李賢亮</span>) or Xianliang Li, a 2nd year Master student at <a href="https://english.ucas.ac.cn/">University of Chinese Academy of Sciences</a>. I’m also working as a research student at <a href="http://english.siat.cas.cn/">Shenzhen Institute of Advanced Technology</a>. Before that, I received my B.S. degree from <a href="https://www.sysu.edu.cn/sysuen/">Sun Yat-sen University</a> in 2022.
+                          Hi! I am Leon, Xianliang Li (<span style="font-family: 'LXGW WenKai Mono TC'">李賢亮</span>) or Yinleung Ley, a 3rd-year Master student at <a href="https://english.ucas.ac.cn/">University of Chinese Academy of Sciences</a>. I’m also working as a research student at <a href="http://english.siat.cas.cn/">Shenzhen Institute of Advanced Technology</a>. Before that, I received my B.S. degree from <a href="https://www.sysu.edu.cn/sysuen/">Sun Yat-sen University</a> in 2022.
                         </p>
                         <p>
                             My research interests lie in optimization for machine learning.
@@ -102,16 +102,16 @@
                             <table>
                                 <tbody>
                                     <tr>
-                                        <td style="width: 25%; vertical-align: middle;">
+                                        <!-- <td style="width: 25%; vertical-align: middle;">
                                             <img src="images/tmc1.png" style="width: 150%; max-width: 200px;">
-                                        </td>
+                                        </td> -->
                                         <td style="width: 70%; vertical-align: middle;">
                                             <h3>Time-of-Arrival Simultaneous Sensor and Target Localization with Dynamic Optimal Sensor Placements</h3>
                                             <p><b>Xianliang Li</b>, <a href="https://scholar.google.com/citations?user=nLsqCz4AAAAJ&hl=zh-en">Sheng Xu</a><sup>&dagger;</sup>, <a href="https://cisp.ece.missouri.edu/">K. C. Ho</a></p>
-                                            <p><em><i>under review</i></em> 2024</p>
-                                            <p>
+                                            <p><em><i>Under review</i></em> 2024</p>
+                                            <!-- <p>
                                                 We focus on optimizing the performance of simultaneous sensor and target localization (SSTL) with several mobile monostatic sensors, using the time-of-arrival (TOA) measurements returned from the target, passive anchors at known positions, and other sensors.
-                                            </p>
+                                            </p> -->
                                         </td>
                                     </tr>
                                 </tbody>
@@ -197,7 +197,7 @@
 
                     <div class="content">
                         <p style="text-align: right; font-size: x-small;">
-                            Website updated 24/08/16.
+                            Website updated 24/09/14.
                         </p>
                     </div>
                 </td>
