--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
                     <div class="content">
                         <p>
-                          Hi! I am Leon, Xianliang Li (<span style="font-family: 'LXGW WenKai Mono TC'">李賢亮</span>) or Yinleung Ley, a 3rd-year Master student at <a href="https://english.ucas.ac.cn/">University of Chinese Academy of Sciences</a>. I’m also working as a research student at <a href="http://english.siat.cas.cn/">Shenzhen Institute of Advanced Technology</a>. Before that, I received my B.S. degree from <a href="https://www.sysu.edu.cn/sysuen/">Sun Yat-sen University</a> in 2022.
+                          Hi! I am Leon, Xianliang Li (<span style="font-family: 'LXGW WenKai Mono TC'">李賢亮</span>) or Yinleung Ley (Cantonese), a 3rd-year Master student at <a href="https://english.ucas.ac.cn/">University of Chinese Academy of Sciences</a>. I am also working as a research student at <a href="http://english.siat.cas.cn/">Shenzhen Institute of Advanced Technology</a>. Before that, I received my B.S. degree from <a href="https://www.sysu.edu.cn/sysuen/">Sun Yat-sen University</a> in 2022.
                         </p>
                         <p>
                             My research interests lie in optimization for machine learning.
@@ -95,23 +95,31 @@
                     </div>
 
                     <div class="content">
-                        <h2>Publications</h2>
+                        <h2>Publication</h2>
                         <p style="font-size: 14px;">*: equal contribution; &dagger; corresponding author(s)</p>
 
                         <div class="publication">
                             <table>
                                 <tbody>
                                     <tr>
-                                        <!-- <td style="width: 25%; vertical-align: middle;">
-                                            <img src="images/tmc1.png" style="width: 150%; max-width: 200px;">
-                                        </td> -->
+                                        <td style="width: 70%; vertical-align: middle;">
+                                            <h3>On the Performance Analysis of Momentum Method: A Frequency Domain Perspective</h3>
+                                            <p><b>Xianliang Li</b><sup>*</sup>, Jun Luo<sup>*</sup>, Zhiwei Zheng, <a href="https://scholar.google.co.in/citations?user=rPvC5AkAAAAJ&hl=en">Hanxiao Wang</a>, Li Luo, Lingkun Wen, <a href="https://linlongwu92.github.io/">Linlong Wu</a> <a href="https://scholar.google.com/citations?user=nLsqCz4AAAAJ&hl=zh-en">Sheng Xu</a><sup>&dagger;</sup>
+                                            <p><em><i>Submitted to The Thirteenth International Conference on Learning Representations</i></em> (ICLR), 2025</p>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+
+                        <div class="publication">
+                            <table>
+                                <tbody>
+                                    <tr>
                                         <td style="width: 70%; vertical-align: middle;">
                                             <h3>Time-of-Arrival Simultaneous Sensor and Target Localization with Dynamic Optimal Sensor Placements</h3>
                                             <p><b>Xianliang Li</b>, <a href="https://scholar.google.com/citations?user=nLsqCz4AAAAJ&hl=zh-en">Sheng Xu</a><sup>&dagger;</sup>, <a href="https://cisp.ece.missouri.edu/">K. C. Ho</a></p>
-                                            <p><em><i>Under review</i></em> 2024</p>
-                                            <!-- <p>
-                                                We focus on optimizing the performance of simultaneous sensor and target localization (SSTL) with several mobile monostatic sensors, using the time-of-arrival (TOA) measurements returned from the target, passive anchors at known positions, and other sensors.
-                                            </p> -->
+                                            <p><em><i>Submitted to IEEE Transactions on Aerospace and Electronic Systems</i></em> 2024</p>
                                         </td>
                                     </tr>
                                 </tbody>
@@ -197,7 +205,7 @@
 
                     <div class="content">
                         <p style="text-align: right; font-size: x-small;">
-                            Website updated 24/09/14.
+                            Website updated 24/10/04.
                         </p>
                     </div>
                 </td>
