--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                     <tr>
                                         <td style="width: 70%; vertical-align: middle;">
                                             <h3>On the Performance Analysis of Momentum Method: A Frequency Domain Perspective</h3>
-                                            <p><b>Xianliang Li</b><sup>*</sup>, Jun Luo<sup>*</sup>, Zhiwei Zheng, <a href="https://scholar.google.co.in/citations?user=rPvC5AkAAAAJ&hl=en">Hanxiao Wang</a>, Li Luo, Lingkun Wen, <a href="https://linlongwu92.github.io/">Linlong Wu</a> <a href="https://scholar.google.com/citations?user=nLsqCz4AAAAJ&hl=zh-en">Sheng Xu</a><sup>&dagger;</sup>
+                                            <p><b>Xianliang Li</b><sup>*</sup>, Jun Luo<sup>*</sup>, Zhiwei Zheng, <a href="https://scholar.google.co.in/citations?user=rPvC5AkAAAAJ&hl=en">Hanxiao Wang</a>, Li Luo, Lingkun Wen, <a href="https://linlongwu92.github.io/">Linlong Wu</a>, <a href="https://scholar.google.com/citations?user=nLsqCz4AAAAJ&hl=zh-en">Sheng Xu</a><sup>&dagger;</sup>
                                             <p><em><i>Submitted to The Thirteenth International Conference on Learning Representations</i></em> (ICLR), 2025</p>
                                         </td>
                                     </tr>
