--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                         <a href="https://scholar.google.com/citations?user=vQKUgscAAAAJ&hl=en&oi=ao">Google Scholar</a> / 
                                         <a href="https://github.com/yinleung">GitHub</a> / 
                                         <a href="https://orcid.org/0009-0001-4532-3968">ORCID</a> / 
-                                        <a href="https://yinleung.github.io/files/xlliCV.pdf">CV</a>
+                                        <a href="https://yinleung.github.io/files/xianliangCV.pdf">CV</a>
                                     </p>
                                     <p style="text-align: left; font-size: 16px;">
                                         <b>Master student</b><br>
