--- a/index.html
+++ b/index.html
@@ -90,7 +90,12 @@
                           Hi! I am Leon, Xianliang Li (<span style="font-family: 'LXGW WenKai Mono TC'">李賢亮</span>) or Yinleung Ley (Cantonese), a 3rd-year Master student at <a href="https://english.ucas.ac.cn/">University of Chinese Academy of Sciences</a>. I am also working as a research student at <a href="http://english.siat.cas.cn/">Shenzhen Institute of Advanced Technology</a>. Before that, I received my B.S. degree from <a href="https://www.sysu.edu.cn/sysuen/">Sun Yat-sen University</a> in 2022.
                         </p>
                         <p>
-                            My research interests lie in optimization for machine learning.
+                            My research interests lie in optimization for machine learning and the theoretical fundations of deep learning.
+                        </p>
+                        <p><b><i>
+                            I am actively looking for Ph.D. positions starting from fall 2025. Please feel free to contact me if you are interested in working with me.
+                        </i>
+                        </b>
                         </p>
                     </div>
 
@@ -104,8 +109,8 @@
                                     <tr>
                                         <td style="width: 70%; vertical-align: middle;">
                                             <h3>On the Performance Analysis of Momentum Method: A Frequency Domain Perspective</h3>
-                                            <p><b>Xianliang Li</b><sup>*</sup>, Jun Luo<sup>*</sup>, Zhiwei Zheng, <a href="https://scholar.google.co.in/citations?user=rPvC5AkAAAAJ&hl=en">Hanxiao Wang</a>, Li Luo, Lingkun Wen, <a href="https://linlongwu92.github.io/">Linlong Wu</a>, <a href="https://scholar.google.com/citations?user=nLsqCz4AAAAJ&hl=zh-en">Sheng Xu</a><sup>&dagger;</sup>
-                                            <p><em><i>Submitted to The Thirteenth International Conference on Learning Representations</i></em> (ICLR), 2025</p>
+                                            <p><b>Xianliang Li</b><sup>*</sup>, Jun Luo<sup>*</sup>, Zhiwei Zheng, <a href="https://scholar.google.co.in/citations?user=rPvC5AkAAAAJ&hl=en">Hanxiao Wang</a>, Li Luo, Lingkun Wen, <a href="https://linlongwu92.github.io/">Linlong Wu</a>, <a href="https://scholar.google.com/citations?user=nLsqCz4AAAAJ&hl=zh-en">Sheng Xu</a>
+                                            <p><em><i>Submitted</p>
                                         </td>
                                     </tr>
                                 </tbody>
@@ -205,7 +210,7 @@
 
                     <div class="content">
                         <p style="text-align: right; font-size: x-small;">
-                            Website updated 24/10/04.
+                            Website updated 24/11/16.
                         </p>
                     </div>
                 </td>
