--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                           Hi! I am Leon, Xianliang Li (<span style="font-family: 'LXGW WenKai Mono TC'">李賢亮</span>) or Yinleung Ley (Cantonese), a 3rd-year Master student at <a href="https://english.ucas.ac.cn/">University of Chinese Academy of Sciences</a>. I am also working as a research student at <a href="http://english.siat.cas.cn/">Shenzhen Institute of Advanced Technology</a>. Before that, I received my B.S. degree from <a href="https://www.sysu.edu.cn/sysuen/">Sun Yat-sen University</a> in 2022.
                         </p>
                         <p>
-                            My research interests lie in optimization for machine learning and the theoretical fundations of deep learning.
+                            My research interests lie in optimization for machine learning and theoretical foundation of deep learning.
                         </p>
                         <p><b><i>
                             I am actively looking for Ph.D. positions starting from fall 2025. Please feel free to contact me if you are interested in working with me.
