--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                             My research interests lie in optimization for machine learning and theoretical foundation of deep learning.
                         </p>
                         <p><b><i>
-                            I am actively looking for Ph.D. positions starting from fall 2025 and potential collaborations. Please feel free to contact me if you are interested in working with me.
+                            I am actively looking for potential collaborations. Please feel free to contact me if you are interested in working with me.
                         </i>
                         </b>
                         </p>
