--- a/index.html
+++ b/index.html
@@ -92,15 +92,10 @@
                         <p>
                             My research interests lie in optimization for machine learning and theoretical foundation of deep learning.
                         </p>
-                        <p><b><i>
-                            I am actively looking for potential collaborations. Please feel free to contact me if you are interested in working with me.
-                        </i>
-                        </b>
-                        </p>
                     </div>
 
                     <div class="content">
-                        <h2>Publication</h2>
+                        <h2>Selected Research</h2>
                         <p style="font-size: 14px;">*: equal contribution; &dagger; corresponding author(s)</p>
 
                         <div class="publication">
@@ -110,13 +105,13 @@
                                         <td style="width: 70%; vertical-align: middle;">
                                             <h3>On the Performance Analysis of Momentum Method: A Frequency Domain Perspective</h3>
                                             <p><b>Xianliang Li</b><sup>*</sup>, Jun Luo<sup>*</sup>, Zhiwei Zheng, <a href="https://scholar.google.co.in/citations?user=rPvC5AkAAAAJ&hl=en">Hanxiao Wang</a>, Li Luo, Lingkun Wen, <a href="https://linlongwu92.github.io/">Linlong Wu</a>, <a href="https://scholar.google.com/citations?user=nLsqCz4AAAAJ&hl=zh-en">Sheng Xu</a>
-                                            <p><em><i>Submitted</p>
+                                            <p><em><i>Under review</i></em> 2024</p>
                                         </td>
                                     </tr>
                                 </tbody>
                             </table>
                         </div>
-
+                        
                         <div class="publication">
                             <table>
                                 <tbody>
@@ -124,7 +119,7 @@
                                         <td style="width: 70%; vertical-align: middle;">
                                             <h3>Time-of-Arrival Simultaneous Sensor and Target Localization with Dynamic Optimal Sensor Placements</h3>
                                             <p><b>Xianliang Li</b>, <a href="https://scholar.google.com/citations?user=nLsqCz4AAAAJ&hl=zh-en">Sheng Xu</a><sup>&dagger;</sup>, <a href="https://cisp.ece.missouri.edu/">K. C. Ho</a></p>
-                                            <p><em><i>Submitted to IEEE Transactions on Aerospace and Electronic Systems</i></em> 2024</p>
+                                            <p><em><i>Under review</i></em> 2024</p>
                                         </td>
                                     </tr>
                                 </tbody>
@@ -145,7 +140,7 @@
                             </table>
                         </div>
 
-                        <div class="publication">
+                        <!-- <div class="publication">
                             <table>
                                 <tbody>
                                     <tr>
@@ -158,7 +153,7 @@
                                 </tbody>
                             </table>
                         </div>
-                    </div>
+                    </div> -->
 
                     <div class="content">
                         <h2>Education</h2>
@@ -203,14 +198,14 @@
                         <p style="margin-top: 5px;">
                           <li> Cantonese (Native) </li>
                           <li> Mandarin Chinese (Native) </li>
-                          <li> English (Conversational) </li>
+                          <li> English (Competent) </li>
                           <li> Japanese (Beginner) </li>
                         </p>
                     </div>
 
                     <div class="content">
                         <p style="text-align: right; font-size: x-small;">
-                            Website updated 24/11/16.
+                            Website updated 24/11/30.
                         </p>
                     </div>
                 </td>
