--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                         <a href="https://scholar.google.com/citations?user=vQKUgscAAAAJ&hl=en&oi=ao">Google Scholar</a> / 
                                         <a href="https://github.com/yinleung">GitHub</a> / 
                                         <a href="https://orcid.org/0009-0001-4532-3968">ORCID</a> / 
-                                        <a href="https://yinleung.github.io/files/xianliangCV.pdf">CV</a>
+                                        <a href="https://yinleung.github.io/files/CV_Xianliang.pdf">CV</a>
                                     </p>
                                     <p style="text-align: left; font-size: 16px;">
                                         <b>Master student</b><br>
@@ -106,6 +106,7 @@
                                             <h3>On the Performance Analysis of Momentum Method: A Frequency Domain Perspective</h3>
                                             <p><b>Xianliang Li</b><sup>*</sup>, Jun Luo<sup>*</sup>, Zhiwei Zheng, <a href="https://scholar.google.co.in/citations?user=rPvC5AkAAAAJ&hl=en">Hanxiao Wang</a>, Li Luo, Lingkun Wen, <a href="https://linlongwu92.github.io/">Linlong Wu</a>, <a href="https://scholar.google.com/citations?user=nLsqCz4AAAAJ&hl=zh-en">Sheng Xu</a>
                                             <p><em><i>Under review</i></em> 2024</p>
+                                            <p>[<a href="https://arxiv.org/abs/2411.19671">arxiv</a>]</p>
                                         </td>
                                     </tr>
                                 </tbody>
@@ -205,7 +206,7 @@
 
                     <div class="content">
                         <p style="text-align: right; font-size: x-small;">
-                            Website updated 24/11/30.
+                            Website updated 24/12/02.
                         </p>
                     </div>
                 </td>
