--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                                         Xianliang Li
                                     </p>
                                     <p style="text-align: center; font-family: 'LXGW WenKai Mono TC', 'Lato', Verdana, Helvetica, sans-serif; font-size: 20px; margin-bottom: 20px;">
-                                        李賢亮
+                                        李贤亮
                                     </p>
                                     <p style="text-align: center; font-family: serif, 'Lato', Verdana, Helvetica, sans-serif; font-size: 18px; margin-bottom: 20px;">
                                         <a href="https://scholar.google.com/citations?user=vQKUgscAAAAJ&hl=en&oi=ao">Google Scholar</a> / 
@@ -87,10 +87,10 @@
 
                     <div class="content">
                         <p>
-                          Hi! I am Leon, Xianliang Li (<span style="font-family: 'LXGW WenKai Mono TC'">李賢亮</span>) or Yinleung Ley (Cantonese), a 3rd-year Master student at <a href="https://english.ucas.ac.cn/">University of Chinese Academy of Sciences</a>. I am also working as a research student at <a href="http://english.siat.cas.cn/">Shenzhen Institute of Advanced Technology</a>. Before that, I received my B.S. degree from <a href="https://www.sysu.edu.cn/sysuen/">Sun Yat-sen University</a> in 2022.
+                          Hi! I am Leon, Xianliang Li (<span style="font-family: 'LXGW WenKai Mono TC'">李贤亮</span>) or Yinleung Ley (Cantonese), a 3rd-year Master student at <a href="https://english.ucas.ac.cn/">University of Chinese Academy of Sciences</a>. I am also working as a research student at <a href="http://english.siat.cas.cn/">Shenzhen Institute of Advanced Technology</a>. Before that, I received my B.S. degree from <a href="https://www.sysu.edu.cn/sysuen/">Sun Yat-sen University</a> in 2022.
                         </p>
                         <p>
-                            My research interests lie in optimization for machine learning and theoretical foundation of deep learning.
+                            Research interests: Deep Learning Theory, Optimization.
                         </p>
                     </div>
 
