--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
     <link rel="icon" type="image/png" href="images/letter-l.png">
     <link href="https://fonts.googleapis.com/css?family=LXGW+WenKai+Mono+TC" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'LXGW WenKai Mono TC', 'Lato', Verdana, Helvetica, sans-serif;
@@ -20,11 +21,13 @@
             max-width: 900px;
             margin: 0 auto;
             border-collapse: collapse;
-            padding: 0 10px;
+            padding: 0 4px;
         }
         h2 {
-            font-family: Arial, Helvetica, sans-serif;
-            margin-bottom: 10px;
+            font-family: 'Lato', Arial, sans-serif;
+            font-weight: 700;
+            color: #000000;
+            margin-bottom: 4px;
         }
         h3 {
             font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
@@ -42,7 +45,39 @@
             height: auto;
         }
         .content {
-            padding: 10px;
+            padding: 4px;
+        }
+
+
+        .subheading {
+            font-family: Arial, sans-serif;
+            font-weight: bold;
+            color: #444; 
+            font-size: 18px;
+            margin-bottom: 0px; 
+        }
+
+        .paper-title {
+            font-family: 'Times New Roman', Times, serif;
+            font-weight: normal;
+            font-size: 22px;
+            color: #000000; 
+            margin-top: 0px; 
+        }
+
+
+        .paper-title a {
+            color: #0077b6;
+            text-decoration: none; 
+        }
+
+        .paper-title a:hover {
+            text-decoration: underline; 
+        }
+
+
+        .publication {
+            margin-top: 4px; 
         }
     </style>
 </head>
@@ -85,128 +120,99 @@
                         </tbody>
                     </table>
 
+
                     <div class="content">
+                        <h2>About</h2>
                         <p>
-                          Hi! I am Leon, Xianliang Li (<span style="font-family: 'LXGW WenKai Mono TC'">李贤亮</span>) or Yinleung Ley (Cantonese), a 3rd-year Master student at <a href="https://english.ucas.ac.cn/">University of Chinese Academy of Sciences</a>. I am also working as a research student at <a href="http://english.siat.cas.cn/">Shenzhen Institute of Advanced Technology</a>. Before that, I received my B.S. degree from <a href="https://www.sysu.edu.cn/sysuen/">Sun Yat-sen University</a> in 2022.
+                            Hi! I am Leon, Xianliang Li (<span style="font-family: 'LXGW WenKai Mono TC'">李贤亮</span>) or Yinleung Ley (Cantonese), a 3rd-year Master student at <a href="https://english.ucas.ac.cn/">University of Chinese Academy of Sciences</a>. I am also working as a research student at <a href="http://english.siat.cas.cn/">Shenzhen Institute of Advanced Technology</a>. Before that, I received my B.S. degree from <a href="https://www.sysu.edu.cn/sysuen/">Sun Yat-sen University</a> in 2022.
                         </p>
                         <p>
                             Research interests: Deep Learning Theory, Optimization.
                         </p>
                     </div>
 
+
+                    <div class="content">
+                        <h2>News</h2>
+                        <ul>
+                            <li><strong>2025-01-23</strong>: Our paper “<a href="https://arxiv.org/abs/2411.19671">On the Performance Analysis of Momentum Method: A Frequency Domain Perspective</a>” has been accepted by ICLR 2025!</li>
+                        </ul>
+                    </div>
+
+
                     <div class="content">
                         <h2>Selected Research</h2>
                         <p style="font-size: 14px;">*: equal contribution; &dagger; corresponding author(s)</p>
 
+                        <h3 class="subheading">Optimizer</h3>
+                        <ul>
                         <div class="publication">
                             <table>
                                 <tbody>
                                     <tr>
                                         <td style="width: 70%; vertical-align: middle;">
-                                            <h3>On the Performance Analysis of Momentum Method: A Frequency Domain Perspective</h3>
-                                            <p><b>Xianliang Li</b><sup>*</sup>, Jun Luo<sup>*</sup>, Zhiwei Zheng, <a href="https://scholar.google.co.in/citations?user=rPvC5AkAAAAJ&hl=en">Hanxiao Wang</a>, Li Luo, Lingkun Wen, <a href="https://linlongwu92.github.io/">Linlong Wu</a>, <a href="https://scholar.google.com/citations?user=nLsqCz4AAAAJ&hl=zh-en">Sheng Xu</a>
-                                            <p><em><i>Under review</i></em> 2024</p>
-                                            <p>[<a href="https://arxiv.org/abs/2411.19671">arxiv</a>]</p>
+                                            <li>
+                                            <h3 class="paper-title"><a href="https://arxiv.org/abs/2411.19671">On the Performance Analysis of Momentum Method: A Frequency Domain Perspective</a></h3>
+                                            <p><b>Xianliang Li</b><sup>*</sup>, Jun Luo<sup>*</sup>, Zhiwei Zheng*, Hanxiao Wang, Li Luo, Lingkun Wen, Linlong Wu, Sheng Xu<sup>&dagger;</sup></p>
+                                            <p><em>ICLR</em> 2025</p>
+                                            </li>
                                         </td>
                                     </tr>
                                 </tbody>
                             </table>
                         </div>
-                        
-                        <div class="publication">
-                            <table>
-                                <tbody>
-                                    <tr>
-                                        <td style="width: 70%; vertical-align: middle;">
-                                            <h3>Time-of-Arrival Simultaneous Sensor and Target Localization with Dynamic Optimal Sensor Placements</h3>
-                                            <p><b>Xianliang Li</b>, <a href="https://scholar.google.com/citations?user=nLsqCz4AAAAJ&hl=zh-en">Sheng Xu</a><sup>&dagger;</sup>, <a href="https://cisp.ece.missouri.edu/">K. C. Ho</a></p>
-                                            <p><em><i>Under review</i></em> 2024</p>
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
+                        </ul>
 
+                        <h3 class="subheading">Localization</h3>
+                        <ul>
                         <div class="publication">
                             <table>
                                 <tbody>
                                     <tr>
                                         <td style="width: 100%; vertical-align: middle;">
-                                            <h3>Systematical Sensor Path Optimization Solutions for AOA Target Localization Accuracy Improvement with Theoretical Analysis</h3>
-                                            <p><a href="https://scholar.google.com/citations?user=nLsqCz4AAAAJ&hl=zh-en">Sheng Xu</a>, Bing Zhu, <b>Xianliang Li</b>, <a href="https://people.ucas.ac.cn/~wuxinyu?language=en">Xinyu Wu</a>, <a href="https://scholar.google.fr/citations?user=jSv44msAAAAJ&hl=zh-en">Tiantian Xu</a><sup>&dagger;</sup></p>
+                                            <li>
+                                            <h3 class="paper-title"><a href="https://ieeexplore.ieee.org/document/10574382">Systematical Sensor Path Optimization Solutions for AOA Target Localization Accuracy Improvement with Theoretical Analysis</a></h3>
+                                            <p>Sheng Xu, Bing Zhu, <b>Xianliang Li</b>, Xinyu Wu, Tiantian Xu<sup>&dagger;</sup></p>
                                             <p><em>IEEE Transactions on Vehicular Technology</em> 2024</p>
+                                            </li>
                                         </td>
                                     </tr>
                                 </tbody>
                             </table>
                         </div>
-
-                        <!-- <div class="publication">
-                            <table>
-                                <tbody>
-                                    <tr>
-                                        <td style="width: 100%; vertical-align: middle;">
-                                            <h3>3D Source Tracking Using a Position-unknown AOA Sensor with Measurement Drift and UAV Moving Direction Optimization</h3>
-                                            <p>Rongrong Xu, <a href="https://scholar.google.com/citations?user=nLsqCz4AAAAJ&hl=zh-en">Sheng Xu</a><sup>&dagger;</sup>, Bing Zhu, <b>Xianliang Li</b>, Mingxue Cai</p>
-                                            <p><em>IEEE International Conference on Real-time Computing and Robotics</em> 2024</p>
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                    </div> -->
+                    </div>
+                    </ul>
 
                     <div class="content">
                         <h2>Education</h2>
-                        <div class="education">
-                            <table>
-                                <tbody>
-                                    <tr>
-                                        <td class="education-logo" style="width: 20%; vertical-align: middle;">
-                                            <img class="logo" src="images/ucas_logo.png">
-                                        </td>
-                                        <td style="width: 80%; vertical-align: middle;">
-                                            <h3>University of Chinese Academy of Sciences</h3>
-                                            <p>Master student in Computer Science</p>
-                                            <p>Advisor: <a href="https://scholar.google.com/citations?user=nLsqCz4AAAAJ&hl=zh-en">Prof. Sheng Xu</a></p>
-                                            <p>2022.9 - Present</p>
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                        <div class="education">
-                            <table>
-                                <tbody>
-                                    <tr>
-                                        <td class="education-logo" style="width: 20%; vertical-align: middle;">
-                                            <img class="logo" src="images/sysu_logo.png">
-                                        </td>
-                                        <td style="width: 80%; vertical-align: middle;">
-                                            <h3>Sun Yat-sen University</h3>
-                                            <p>Undergraduate student in Physics</p>
-                                            <p>Advisor: <a href="https://spa.sysu.edu.cn/zh-hans/teacher/148">Prof. Shangfei Liu</a></p>
-                                            <p>2018.9 - 2022.6</p>
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
+                        <ul>
+                            <li>
+                                <b>University of Chinese Academy of Sciences</b>
+                                <p>Master student in Computer Science</p>
+                                <p>2022/09 - 2025/06</p>
+                            </li>
+                            <li>
+                                <b>Sun Yat-sen University</b>
+                                <p>Undergraduate student in Physics</p>
+                                <p>2018/09 - 2022/06</p>
+                            </li>
+                        </ul>
                     </div>
 
                     <div class="content">
                         <h2>Languages</h2>
-                        <p style="margin-top: 5px;">
-                          <li> Cantonese (Native) </li>
-                          <li> Mandarin Chinese (Native) </li>
-                          <li> English (Competent) </li>
-                          <li> Japanese (Beginner) </li>
-                        </p>
+                        <ul>
+                            <li>Cantonese (Native)</li>
+                            <li>Mandarin Chinese (Native)</li>
+                            <li>English (Fluent)</li>
+                            <li>Japanese (Beginner)</li>
+                        </ul>
                     </div>
 
+                    <!-- Footer -->
                     <div class="content">
                         <p style="text-align: right; font-size: x-small;">
-                            Website updated 24/12/02.
+                            Website updated 2025/01/24.
                         </p>
                     </div>
                 </td>
