--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                     </p>
                                     <p style="text-align: left; font-size: 16px;">
                                         <b>Master student</b><br>
-                                        Shenzhen Institute of Advanced Technology<br>
+                                        Shenzhen Institutes of Advanced Technology<br>
                                         University of Chinese Academy of Sciences
                                     </p>
                                     <p style="text-align: left; font-size: 16px;">
@@ -124,7 +124,7 @@
                     <div class="content">
                         <h2>About</h2>
                         <p>
-                            Hi! I am Leon, Xianliang Li (<span style="font-family: 'LXGW WenKai Mono TC'">李贤亮</span>) or Yinleung Ley (Cantonese), a 3rd-year Master student at <a href="https://english.ucas.ac.cn/">University of Chinese Academy of Sciences</a>. I am also working as a research student at <a href="http://english.siat.cas.cn/">Shenzhen Institute of Advanced Technology</a>. Before that, I received my B.S. degree from <a href="https://www.sysu.edu.cn/sysuen/">Sun Yat-sen University</a> in 2022.
+                            Hi! I am Leon, Xianliang Li (<span style="font-family: 'LXGW WenKai Mono TC'">李贤亮</span>) or Yinleung Ley (Cantonese), a 3rd-year Master student at <a href="https://english.ucas.ac.cn/">University of Chinese Academy of Sciences</a>. I am also working as a research student at <a href="http://english.siat.cas.cn/">Shenzhen Institutes of Advanced Technology</a>.
                         </p>
                         <p>
                             Research interests: Deep Learning Theory, Optimization.
@@ -188,12 +188,12 @@
                         <ul>
                             <li>
                                 <b>University of Chinese Academy of Sciences</b>
-                                <p>Master student in Computer Science</p>
+                                <p>M.Eng. in Computer Technology</p>
                                 <p>2022/09 - 2025/06</p>
                             </li>
                             <li>
                                 <b>Sun Yat-sen University</b>
-                                <p>Undergraduate student in Physics</p>
+                                <p>B.S. in Physics</p>
                                 <p>2018/09 - 2022/06</p>
                             </li>
                         </ul>
@@ -212,7 +212,7 @@
                     <!-- Footer -->
                     <div class="content">
                         <p style="text-align: right; font-size: x-small;">
-                            Website updated 2025/01/24.
+                            Website updated 2025/02/11.
                         </p>
                     </div>
                 </td>
