--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     <div class="content">
                         <h2>News</h2>
                         <ul>
-                            <li><strong>2025-01-23</strong>: Our paper “<a href="https://arxiv.org/abs/2411.19671">On the Performance Analysis of Momentum Method: A Frequency Domain Perspective</a>” has been accepted by ICLR 2025!</li>
+                            <li><strong>2025-01-23</strong>: Our paper “<a href="https://openreview.net/forum?id=tznvtmSEiN">On the Performance Analysis of Momentum Method: A Frequency Domain Perspective</a>” has been accepted by ICLR 2025!</li>
                         </ul>
                     </div>
 
@@ -152,7 +152,7 @@
                                     <tr>
                                         <td style="width: 70%; vertical-align: middle;">
                                             <li>
-                                            <h3 class="paper-title"><a href="https://arxiv.org/abs/2411.19671">On the Performance Analysis of Momentum Method: A Frequency Domain Perspective</a></h3>
+                                            <h3 class="paper-title"><a href="https://openreview.net/forum?id=tznvtmSEiN">On the Performance Analysis of Momentum Method: A Frequency Domain Perspective</a></h3>
                                             <p><b>Xianliang Li</b><sup>*</sup>, Jun Luo<sup>*</sup>, Zhiwei Zheng*, Hanxiao Wang, Li Luo, Lingkun Wen, Linlong Wu, Sheng Xu<sup>&dagger;</sup></p>
                                             <p><em>ICLR</em> 2025</p>
                                             </li>
