--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                         <ul>
                             <li>Cantonese (Native)</li>
                             <li>Mandarin Chinese (Native)</li>
-                            <li>English (Fluent)</li>
+                            <li>English (Conversational)</li>
                             <li>Japanese (Beginner)</li>
                         </ul>
                     </div>
@@ -212,7 +212,7 @@
                     <!-- Footer -->
                     <div class="content">
                         <p style="text-align: right; font-size: x-small;">
-                            Website updated 2025/02/11.
+                            Website updated 2025/04/12.
                         </p>
                     </div>
                 </td>
