--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Xianliang Li">
     <title>Xianliang Li</title>
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
-    <link rel="icon" type="image/png" href="images/letter-l.png">
+    <link rel="icon" type="image/png" href="images/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=LXGW+WenKai+Mono+TC" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
     <style>
@@ -131,15 +131,6 @@
                         </p>
                     </div>
 
-
-                    <div class="content">
-                        <h2>News</h2>
-                        <ul>
-                            <li><strong>2025-01-23</strong>: Our paper “<a href="https://openreview.net/forum?id=tznvtmSEiN">On the Performance Analysis of Momentum Method: A Frequency Domain Perspective</a>” has been accepted by ICLR 2025!</li>
-                        </ul>
-                    </div>
-
-
                     <div class="content">
                         <h2>Selected Research</h2>
                         <p style="font-size: 14px;">*: equal contribution; &dagger; corresponding author(s)</p>
@@ -199,20 +190,10 @@
                         </ul>
                     </div>
 
-                    <div class="content">
-                        <h2>Languages</h2>
-                        <ul>
-                            <li>Cantonese (Native)</li>
-                            <li>Mandarin Chinese (Native)</li>
-                            <li>English (Conversational)</li>
-                            <li>Japanese (Beginner)</li>
-                        </ul>
-                    </div>
-
                     <!-- Footer -->
                     <div class="content">
                         <p style="text-align: right; font-size: x-small;">
-                            Website updated 2025/04/12.
+                            Website updated 2025/05/21.
                         </p>
                     </div>
                 </td>
