--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
         .subheading {
             font-family: Arial, sans-serif;
             font-weight: bold;
-            color: #444; 
-            font-size: 18px;
+            color: #070144; 
+            font-size: 20px;
             margin-bottom: 0px; 
         }
 
         .paper-title {
             font-family: 'Times New Roman', Times, serif;
             font-weight: normal;
-            font-size: 22px;
+            font-size: 18px;
             color: #000000; 
             margin-top: 0px; 
         }
@@ -143,9 +143,10 @@
                                     <tr>
                                         <td style="width: 70%; vertical-align: middle;">
                                             <li>
-                                            <h3 class="paper-title"><a href="https://openreview.net/forum?id=tznvtmSEiN">On the Performance Analysis of Momentum Method: A Frequency Domain Perspective</a></h3>
+                                            <h3 class="paper-title">On the Performance Analysis of Momentum Method: A Frequency Domain Perspective</h3>
                                             <p><b>Xianliang Li</b><sup>*</sup>, Jun Luo<sup>*</sup>, Zhiwei Zheng*, Hanxiao Wang, Li Luo, Lingkun Wen, Linlong Wu, Sheng Xu<sup>&dagger;</sup></p>
-                                            <p><em>ICLR</em> 2025</p>
+                                            <p><em>International Conference on Learning Representations (ICLR)</em>, 2025</p>
+                                            <p>[<a href="https://openreview.net/forum?id=tznvtmSEiN&noteId=tznvtmSEiN">OpenReview</a>] [<a href="https://arxiv.org/abs/2411.19671">arXiv</a>] [<a href="https://github.com/yinleung/FSGDM">GitHub</a>]</p>
                                             </li>
                                         </td>
                                     </tr>
@@ -162,9 +163,9 @@
                                     <tr>
                                         <td style="width: 100%; vertical-align: middle;">
                                             <li>
-                                            <h3 class="paper-title"><a href="https://ieeexplore.ieee.org/document/10574382">Systematical Sensor Path Optimization Solutions for AOA Target Localization Accuracy Improvement with Theoretical Analysis</a></h3>
-                                            <p>Sheng Xu, Bing Zhu, <b>Xianliang Li</b>, Xinyu Wu, Tiantian Xu<sup>&dagger;</sup></p>
-                                            <p><em>IEEE Transactions on Vehicular Technology</em> 2024</p>
+                                            <h3 class="paper-title">Systematical Time-of-Arrival Simultaneous Sensor and Target Localization with Dynamic Optimal Sensor Placements</h3>
+                                            <p><b>Xianliang Li</b>, Sheng Xu<sup>&dagger;</sup>, K. C. Ho</p>
+                                            <p><em>IEEE Transactions on Aerospace and Electronic Systems</em>, 2025</p>
                                             </li>
                                         </td>
                                     </tr>
