--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
                                             <h3 class="paper-title">Systematical Time-of-Arrival Simultaneous Sensor and Target Localization with Dynamic Optimal Sensor Placements</h3>
                                             <p><b>Xianliang Li</b>, Sheng Xu<sup>&dagger;</sup>, K. C. Ho</p>
                                             <p><em>IEEE Transactions on Aerospace and Electronic Systems</em>, 2025</p>
+                                            <p>[<a href="https://ieeexplore.ieee.org/document/11015991">IEEEXplore</a>]</p>
                                             </li>
                                         </td>
                                     </tr>
@@ -194,7 +195,7 @@
                     <!-- Footer -->
                     <div class="content">
                         <p style="text-align: right; font-size: x-small;">
-                            Website updated 2025/05/21.
+                            Website updated 2025/05/28.
                         </p>
                     </div>
                 </td>
