--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                                     <tr>
                                         <td style="width: 100%; vertical-align: middle;">
                                             <li>
-                                            <h3 class="paper-title">Systematical Time-of-Arrival Simultaneous Sensor and Target Localization with Dynamic Optimal Sensor Placements</h3>
+                                            <h3 class="paper-title">Time-of-Arrival Simultaneous Sensor and Target Localization With Dynamic Optimal Sensor Placements</h3>
                                             <p><b>Xianliang Li</b>, Sheng Xu<sup>&dagger;</sup>, K. C. Ho</p>
                                             <p><em>IEEE Transactions on Aerospace and Electronic Systems</em>, 2025</p>
                                             <p>[<a href="https://ieeexplore.ieee.org/document/11015991">IEEEXplore</a>]</p>
