--- a/index.html
+++ b/index.html
@@ -48,19 +48,10 @@
             padding: 4px;
         }
 
-
-        .subheading {
-            font-family: Arial, sans-serif;
-            font-weight: bold;
-            color: #070144; 
-            font-size: 20px;
-            margin-bottom: 0px; 
-        }
-
         .paper-title {
             font-family: 'Times New Roman', Times, serif;
             font-weight: normal;
-            font-size: 18px;
+            font-size: 19px;
             color: #000000; 
             margin-top: 0px; 
         }
@@ -103,12 +94,12 @@
                                         <a href="https://yinleung.github.io/files/CV_Xianliang.pdf">CV</a>
                                     </p>
                                     <p style="text-align: left; font-size: 16px;">
-                                        <b>Master student</b><br>
-                                        Shenzhen Institutes of Advanced Technology<br>
-                                        University of Chinese Academy of Sciences
+                                        <b>Incoming PhD student</b><br>
+                                        The Institute of Statistical Mathematics<br>
+                                        The Graduate University for Advanced Studies, SOKENDAI
                                     </p>
                                     <p style="text-align: left; font-size: 16px;">
-                                        <b>Email</b>: yinleung.ley (at) gmail.com / xl.li4 (at) siat.ac.cn
+                                        <b>Email</b>: yinleung.ley (at) gmail.com
                                     </p>
                                 </td>
                                 <td class="profile-photo" style="padding: 10px; width: 34%; max-width: 150px;">
@@ -124,7 +115,8 @@
                     <div class="content">
                         <h2>About</h2>
                         <p>
-                            Hi! I am Leon, Xianliang Li (<span style="font-family: 'LXGW WenKai Mono TC'">李贤亮</span>) or Yinleung Ley (Cantonese), a 3rd-year Master student at <a href="https://english.ucas.ac.cn/">University of Chinese Academy of Sciences</a>. I am also working as a research student at <a href="http://english.siat.cas.cn/">Shenzhen Institutes of Advanced Technology</a>.
+                            Hi! I am Leon, Xianliang Li (<span style="font-family: 'LXGW WenKai Mono TC'">李贤亮</span>), an incoming PhD student at The Institute of Statistical Mathematics. Previously, I received my B.Sc. in Physics at Sun Yat-sen University, and my M.Eng. in Computer Technology at University of Chinese Academy of Sciences.
+
                         </p>
                         <p>
                             Research interests: Deep Learning Theory, Optimization.
@@ -132,10 +124,9 @@
                     </div>
 
                     <div class="content">
-                        <h2>Selected Research</h2>
+                        <h2>Selected Publications</h2>
                         <p style="font-size: 14px;">*: equal contribution; &dagger; corresponding author(s)</p>
 
-                        <h3 class="subheading">Optimizer</h3>
                         <ul>
                         <div class="publication">
                             <table>
@@ -155,7 +146,6 @@
                         </div>
                         </ul>
 
-                        <h3 class="subheading">Localization</h3>
                         <ul>
                         <div class="publication">
                             <table>
@@ -180,6 +170,11 @@
                         <h2>Education</h2>
                         <ul>
                             <li>
+                                <b>The Graduate University for Advanced Studies, SOKENDAI</b>
+                                <p>Ph.D. in Statistical Sciences</p>
+                                <p>2025/10 - Current</p>
+                            </li>
+                            <li>
                                 <b>University of Chinese Academy of Sciences</b>
                                 <p>M.Eng. in Computer Technology</p>
                                 <p>2022/09 - 2025/06</p>
@@ -195,7 +190,7 @@
                     <!-- Footer -->
                     <div class="content">
                         <p style="text-align: right; font-size: x-small;">
-                            Website updated 2025/05/28.
+                            Website updated 2025/06/07.
                         </p>
                     </div>
                 </td>
