--- a/index.html
+++ b/index.html
@@ -102,10 +102,8 @@
                                         <b>Email</b>: yinleung.ley (at) gmail.com
                                     </p>
                                 </td>
-                                <td class="profile-photo" style="padding: 10px; width: 34%; max-width: 150px;">
-                                    <a href="images/portrait.jpg">
-                                        <img alt="profile photo" src="images/portrait.jpg">
-                                    </a>
+                                <td style="padding:2%;width:40%;max-width:40%">
+                                    <a href="images/portrait.jpg"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/portrait.jpg" class="hoverZoomLink"></a>
                                 </td>
                             </tr>
                         </tbody>
@@ -115,7 +113,7 @@
                     <div class="content">
                         <h2>About</h2>
                         <p>
-                            Hi! I am Leon, Xianliang Li (<span style="font-family: 'LXGW WenKai Mono TC'">李贤亮</span>), an incoming PhD student at The Institute of Statistical Mathematics. Previously, I received my B.Sc. in Physics at Sun Yat-sen University, and my M.Eng. in Computer Technology at University of Chinese Academy of Sciences.
+                            Hi! I am Leon, Xianliang Li, an incoming PhD student at <a href="https://www.ism.ac.jp/index_e.html">The Institute of Statistical Mathematics</a>, and <a href="https://www.soken.ac.jp/en/">The Graduate University for Advanced Studies, SOKENDAI</a>. Previously, I received my B.Sc. in Physics at <a href="https://www.sysu.edu.cn/sysuen/">Sun Yat-sen University</a>, and my M.Eng. in Computer Technology at <a href="http://english.siat.cas.cn/">Shenzhen Institutes of Advanced Technology</a> and <a href="https://english.ucas.ac.cn/">University of Chinese Academy of Sciences</a>.
 
                         </p>
                         <p>
@@ -190,7 +188,7 @@
                     <!-- Footer -->
                     <div class="content">
                         <p style="text-align: right; font-size: x-small;">
-                            Website updated 2025/06/07.
+                            Website updated 2025/08/06. This site is based on <a href="https://jonbarron.info/" style="font-size: inherit;">Jonathon Barron's website</a>.
                         </p>
                     </div>
                 </td>
