--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                         <a href="https://yinleung.github.io/files/CV_Xianliang.pdf">CV</a>
                                     </p>
                                     <p style="text-align: left; font-size: 16px;">
-                                        <b>Incoming PhD student</b><br>
+                                        <b>PhD student</b><br>
                                         The Institute of Statistical Mathematics<br>
                                         The Graduate University for Advanced Studies, SOKENDAI
                                     </p>
@@ -113,8 +113,10 @@
                     <div class="content">
                         <h2>About</h2>
                         <p>
-                            Hi! I am Leon, Xianliang Li, an incoming PhD student at <a href="https://www.ism.ac.jp/index_e.html">The Institute of Statistical Mathematics</a>, and <a href="https://www.soken.ac.jp/en/">The Graduate University for Advanced Studies, SOKENDAI</a>. Previously, I received my B.Sc. in Physics at <a href="https://www.sysu.edu.cn/sysuen/">Sun Yat-sen University</a>, and my M.Eng. in Computer Technology at <a href="http://english.siat.cas.cn/">Shenzhen Institutes of Advanced Technology</a> and <a href="https://english.ucas.ac.cn/">University of Chinese Academy of Sciences</a>.
-
+                            I am currently a PhD student at <a href="https://www.ism.ac.jp/index_e.html">The Institute of Statistical Mathematics</a>, and <a href="https://www.soken.ac.jp/en/">The Graduate University for Advanced Studies, SOKENDAI</a>, supervised by <a href="https://hermite.jp/">Prof. Han Bao</a>.
+                        </p>    
+                        <p>   
+                            Previously, I received my M.Eng. in Computer Technology at <a href="http://english.siat.cas.cn/">Shenzhen Institutes of Advanced Technology</a> and <a href="https://english.ucas.ac.cn/">University of Chinese Academy of Sciences</a>, where I worked on the research topic of signal processing and localization under the supervision of <a href="https://scholar.google.com/citations?user=nLsqCz4AAAAJ&hl=en">Prof. Sheng Xu</a>. Before that, I received my B.Sc. in Physics at <a href="https://www.sysu.edu.cn/sysuen/">Sun Yat-sen University</a>.
                         </p>
                         <p>
                             Research interests: Deep Learning Theory, Optimization.
@@ -188,7 +190,7 @@
                     <!-- Footer -->
                     <div class="content">
                         <p style="text-align: right; font-size: x-small;">
-                            Website updated 2025/08/06. This site is based on <a href="https://jonbarron.info/" style="font-size: inherit;">Jonathon Barron's website</a>.
+                            Website updated 2025/09/10. This site is based on <a href="https://jonbarron.info/" style="font-size: inherit;">Jonathon Barron's website</a>.
                         </p>
                     </div>
                 </td>
